[WIP] implementing create story form. Having issues

--- a/app/views/users/home_page/_all_users.html.erb
+++ b/app/views/users/home_page/_all_users.html.erb
@@ -13,7 +13,7 @@
       </div>
       <span class="date"><%= time_ago_in_words(story.created_at) %> ago</span>
       <div class="row mt-3">
-        <div class="col-12">
+        <div class="col-12 mb-4">
           <div class="description"><%= story.description %></div>
         </div>
       </div>
