--- a/app/views/layouts/_flash_messages.html.erb
+++ b/app/views/layouts/_flash_messages.html.erb
@@ -1,10 +1,12 @@
-<div class="container" id='flash'>
-  <% flash.each do |name, msg| %>
-    <div class="alert alert-success mt-2" role="alert">
-      <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span>
-      <span class="sr-only">Close</span>
-      </button>
-      <%= content_tag :div, msg, :id => "flash_#{name}" %>
-    </div>
-  <% end %>
-</div>
+<% if flash.present? && !alert %>
+  <div class="container" id='flash'>
+    <% flash.each do |name, msg| %>
+      <div class="alert alert-success mt-2" role="alert">
+        <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span>
+        <span class="sr-only">Close</span>
+        </button>
+        <%= content_tag :div, msg, :id => "flash_#{name}" %>
+      </div>
+    <% end %>
+  </div>
+<% end %>
