--- a/app/views/stories/forms/_add_flight.html.erb
+++ b/app/views/stories/forms/_add_flight.html.erb
@@ -7,7 +7,7 @@
             <div class="col-12 col-lg-6">
               <div class="mb-3">
                 <%= flight_fields.label :flight_date, class: 'light-sub-text' %><br />
-                <%= flight_fields.date_field :flight_date, id: :flight_flight_date, class: 'form-control', value: Date.today %>
+                <%= flight_fields.date_field :flight_date, id: :flight_flight_date, class: 'form-control', value: Date.today %><br />
               </div>
             </div>
             <div class="col-12 col-lg-6">
