lots of general cleanup

--- a/app/assets/stylesheets/_colors.scss
+++ b/app/assets/stylesheets/_colors.scss
@@ -17,3 +17,7 @@ $secondaryButtonColor: #7F7F7F;
 $homeSidebarBackground: white;
 $profileSidebarBackground: #EDEDED;
 $flagBorder: #979797;
+
+$feedBackground: #F2F0F0;
+$softText: #737373;
+$disabledText: #CDCDCD;
