--- a/app/views/stories/forms/_add_ratings.html.erb
+++ b/app/views/stories/forms/_add_ratings.html.erb
@@ -1,13 +1,21 @@
 <div class="story_ratings">
-  <%= form.label :ratings, class: 'light-sub-text' %><br>
-  <%= form.collection_radio_buttons(:rating_ids, Rating.all, :id, :name) do |b| %>
-    <div class="form-check">
-      <% if current_user.ratings.pluck(:name).include?(b.text) %>
-        <%= b.radio_button(class: 'form-check-input', disabled: true) %>
-      <% else %>
-        <%= b.radio_button(class: 'form-check-input', disabled: false) %>
-      <% end %>
-      <%= b.label(class: 'form-check-label') %>
+  <div class="row">
+    <div class="col-12">
+      <div class="row mt-4 mb-4">
+        <%= form.collection_radio_buttons(:rating_ids, Rating.all, :id, :name) do |b| %>
+          <div class="col-6 mt-3">
+            <div class="form-check">
+              <% if current_user.ratings.pluck(:name).include?(b.text) %>
+                <%= b.radio_button(class: 'form-check-input', disabled: true) %>
+                <%= b.label(class: 'form-check-label inactive') %>
+              <% else %>
+                <%= b.radio_button(class: 'form-check-input', disabled: false) %>
+                <%= b.label(class: 'form-check-label active') %>
+              <% end %>
+            </div>
+          </div>
+        <% end %>
+      </div>
     </div>
-  <% end %>
+  </div>
 </div>
