--- a/app/assets/stylesheets/home_page.scss
+++ b/app/assets/stylesheets/home_page.scss
@@ -129,6 +129,7 @@
         color: $linkColor;
       }
       .social_actions {
+        white-space: nowrap;
         .count {}
         .actions {
           a {
