--- a/app/views/users/home_page/_all_users.html.erb
+++ b/app/views/users/home_page/_all_users.html.erb
@@ -51,7 +51,7 @@
         <div class="count col pt-2" id="like_count_<%= story.id %>">
           <%= render 'stories/like_count', story: story %>
         </div>
-        <div class="actions col">
+        <div class="actions col-md-7 float-right">
           <div class="row">
             <div class="col">
               <div class="float-right">
@@ -60,7 +60,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-5">
+            <div class="col-md-6 col-sm-12">
               <div class="float-right">
                 <%= render 'stories/comment_button' %>
               </div>
