--- a/app/assets/stylesheets/home_page.scss
+++ b/app/assets/stylesheets/home_page.scss
@@ -87,6 +87,9 @@
       margin-left: 0.5rem;
     }
     .feed_card {
+      .octicon {
+        fill: $lightSubTextColor;
+      }
       .updated {
         font-size: 1rem;
         font-weight: $regular;
