new ratings instructions

--- a/app/views/stories/forms/_add_ratings.html.erb
+++ b/app/views/stories/forms/_add_ratings.html.erb
@@ -1,7 +1,10 @@
 <div class="story_ratings">
   <div class="row">
     <div class="col-12">
-      <div class="row mt-4 mb-4">
+      <div class="alert alert-info mt-4" role="alert">
+        Use this to add a new rating. Have old ratings you want to add? <%= link_to( 'Edit your profile', edit_user_registration_path(current_user.username)) %>.
+      </div>
+      <div class="row mb-4">
         <%= form.collection_radio_buttons(:rating_ids, Rating.all, :id, :name) do |b| %>
           <div class="col-6 mt-3">
             <div class="form-check">
