--- a/app/views/users/home_page/_followings.html.erb
+++ b/app/views/users/home_page/_followings.html.erb
@@ -1,6 +1,6 @@
 <% if stories.empty? %>
   <div class="alert alert-light" role="alert">
-    Looks like the people you're following have been quiet lately.
+    There isn't anything here yet ...
   </div>
 <% end %>
 
@@ -11,7 +11,7 @@
 <%= paginate stories, theme: 'bootstrap4' %>
 
 <div class="row">
-  <% users.each do |user| %>
+  <% users.try(:each) do |user| %>
     <div class="col-12 col-md-6">
       <div class="card mb-4 feed_card">
         <div class="card-body">
