--- a/app/views/users/home_page/_main_feed.html.erb
+++ b/app/views/users/home_page/_main_feed.html.erb
@@ -2,6 +2,7 @@
   <a class="nav-item nav-link active" id="nav-all-tab" data-toggle="tab" href="#nav-all" role="tab" aria-controls="nav-all" aria-selected="true">Everyone</a>
   <a class="nav-item nav-link" id="nav-following-tab" data-toggle="tab" href="#nav-following" role="tab" aria-controls="nav-following" aria-selected="false">Following <span class="count"><%= @following.count %></span></a>
   <a class="nav-item nav-link" id="nav-followers-tab" data-toggle="tab" href="#nav-followers" role="tab" aria-controls="nav-followers" aria-selected="false">Followers <span class="count"><%= @followers.count %></span></a>
+  <a class="nav-item nav-link" id="nav-you-tab" data-toggle="tab" href="#nav-you" role="tab" aria-controls="nav-you" aria-selected="false">You</span></a>
 </nav>
 <div class="tab-content" id="nav-tabContent">
   <div class="tab-pane fade show active" id="nav-all" role="tabpanel" aria-labelledby="nav-all-tab">
@@ -17,6 +18,11 @@
   <div class="tab-pane fade" id="nav-following" role="tabpanel" aria-labelledby="nav-following-tab">
     <div class="infinite-scroll">
       <%= render 'users/home_page/followings', stories: @following_stories, users: @following %>
+    </div>
+  </div>
+  <div class="tab-pane fade" id="nav-you" role="tabpanel" aria-labelledby="nav-you-tab">
+    <div class="infinite-scroll">
+      <%= render 'users/home_page/followings', stories: current_user.stories.page(params[:page]).per(10), users: nil %>
     </div>
   </div>
 </div>
