[WIP] need to get form validation working

--- a/app/assets/stylesheets/home_page.scss
+++ b/app/assets/stylesheets/home_page.scss
@@ -62,6 +62,12 @@
       padding: 1rem;
       background-color: white;
     }
+    .story_flight {
+      display: none;
+    }
+    .story_ratings {
+      display: none;
+    }
     .story_ratings {
       .form-check-label.active {
         color: $softText;
