--- a/app/views/stories/forms/_create_story.html.erb
+++ b/app/views/stories/forms/_create_story.html.erb
@@ -1,4 +1,4 @@
-<%= form_with model: @story, local: true, class: 'new_story' do |form| %>
+<%= form_with model: @story, local: false, class: 'new_story' do |form| %>
   <% if alert %>
     <% alert.each do |message| %>
       <div class="alert alert-danger" role="alert">
@@ -18,7 +18,7 @@
     <div class="row">
       <div class="col-12">
         <div class="actions">
-          <%= form.submit 'Submit', class: 'btn btn-primary mt-2 float-right' %>
+          <%= form.submit 'Submit', class: 'btn btn-primary mt-2 float-right', id: 'create-story' %>
         </div>
       </div>
     </div>
