--- a/app/views/users/home_page/_main_feed.html.erb
+++ b/app/views/users/home_page/_main_feed.html.erb
@@ -6,7 +6,7 @@
 </nav>
 <div class="tab-content" id="nav-tabContent">
   <div class="tab-pane fade show active" id="nav-all" role="tabpanel" aria-labelledby="nav-all-tab">
-    <div class="infinite-scroll">
+    <div class="infinite-scroll" id="main-feed">
       <%= render 'users/home_page/all_users' %>
     </div>
   </div>
