Stories are now published remotely and show up right away. Fixed bug where switching between flight and ratings caused a ton of network requests

--- a/app/views/stories/create.js.erb
+++ b/app/views/stories/create.js.erb
@@ -1,7 +1,5 @@
-// $('.story_ratings').slideUp();
-// $('.story_flight').slideUp();
-// $('form.new_story').trigger('reset');
-// $('#departure_airport').val('').trigger('change');
-// $('#arrival_airport').val('').trigger('change');
-// $('.identifier_lookup').val('').trigger('change')
+$('form.new_story').trigger('reset');
+$('#departure_airport').val('').trigger('change');
+$('#arrival_airport').val('').trigger('change');
+$('.identifier_lookup').val('').trigger('change')
 $("#main-feed").prepend("<%=j render 'stories/card', story: @story %>");
