Show single post if user uploads multiple times within an hour

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -268,4 +268,8 @@
     min-height: 75vh;
     height: 75vh;
   }
+  #sticky-sidebar {
+    min-width: 18.75rem;
+    max-width: none !important;
+  }
 }
