--- a/app/views/stories/_form_errors.html.erb
+++ b/app/views/stories/_form_errors.html.erb
@@ -1,8 +1,17 @@
-<% alerts.each do |message| %>
+<% if alerts.class == String %>
   <div class="alert alert-danger" role="alert">
     <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span>
       <span class="sr-only">Close</span>
     </button>
     <%= message %>
   </div>
+<% else %>
+  <% alerts.each do |message| %>
+    <div class="alert alert-danger" role="alert">
+      <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span>
+        <span class="sr-only">Close</span>
+      </button>
+      <%= message %>
+    </div>
+  <% end %>
 <% end %>
