--- a/app/views/stories/failure.js.erb
+++ b/app/views/stories/failure.js.erb
@@ -1,1 +1,2 @@
+$('.alert-success').remove();
 $('#form-errors').append("<%=j render 'stories/form_errors', alerts: @story.errors.full_messages %>")
