--- a/app/views/stories/_card.html.erb
+++ b/app/views/stories/_card.html.erb
@@ -14,23 +14,31 @@
       </div>
       <div class="col-lg-4 col-12">
         <div class="float-lg-right">
-          <% if story.user == current_user %>
-            <div class="btn-group">
-              <p data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <%= octicon "kebab-horizontal", width: 20 %>
-              </p>
-              <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                <%= link_to 'Delete', story, method: :delete, data: { confirm: 'Are you sure? You can not un-delete this story'}, remote: true, class: 'delete_story dropdown-item' %>
-                <%= link_to 'Regenerate Map', story_regenerate_map_path(story), method: :post, class: 'dropdown-item' %>
+          <% if story.persisted? %>
+            <% if story.user == current_user %>
+              <div class="btn-group">
+                <p data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  <%= octicon "kebab-horizontal", width: 20 %>
+                </p>
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                  <%= link_to 'Delete', story, method: :delete, data: { confirm: 'Are you sure? You can not un-delete this story'}, remote: true, class: 'delete_story dropdown-item' %>
+                  <% if story.flights.any? %>
+                    <%= link_to 'Regenerate Map', story_regenerate_map_path(story), method: :post, class: 'dropdown-item' %>
+                  <% end %>
+                </div>
               </div>
-            </div>
-          <% else %>
-            <%= render 'users/profile/follow_form', user: story.user %>
+            <% else %>
+              <%= render 'users/profile/follow_form', user: story.user %>
+            <% end %>
           <% end %>
         </div>
       </div>
     </div>
-    <span class="date"><%= time_ago_in_words(story.created_at) %> ago</span>
+    <span class="date">
+      <% if story.persisted? %>
+        <%= time_ago_in_words(story.created_at) %> ago
+      <% end %>
+    </span>
     <div class="row mt-3">
       <div class="col-12 mb-4">
         <div class="description">
@@ -65,34 +73,36 @@
       <div class="row mt-3">
         <div class="col-12 text-center">
           <p class="rating_name">
-            <%= story.ratings.first.name %>
+            <%= story.ratings.last.name %>
           </p>
         </div>
       </div>
     <% end %>
   </div>
-  <div class="card-body social_actions">
-    <div class="row">
-      <div class="count col-6 pt-2" id="like_count_<%= story.id %>">
-        <%= render 'stories/like_count', story: story %>
-      </div>
-      <div class="actions col-5 float-right">
-        <div class="row">
-          <div class="col-sm-12 col-md-4 col-lg-6">
-            <div class="float-right">
-              <div id="like_button_<%= story.id %>">
-                <%= render 'stories/like_button', story: story %>
+  <% if story.persisted? %>
+    <div class="card-body social_actions">
+      <div class="row">
+        <div class="count col-6 pt-2" id="like_count_<%= story.id %>">
+          <%= render 'stories/like_count', story: story %>
+        </div>
+        <div class="actions col-5 float-right">
+          <div class="row">
+            <div class="col-sm-12 col-md-4 col-lg-6">
+              <div class="float-right">
+                <div id="like_button_<%= story.id %>">
+                  <%= render 'stories/like_button', story: story %>
+                </div>
               </div>
             </div>
-          </div>
-          <div class="col-sm-12 col-md-8 col-lg-6">
-            <div class="float-right">
-              <%= render 'stories/comment_button' %>
+            <div class="col-sm-12 col-md-8 col-lg-6">
+              <div class="float-right">
+                <%= render 'stories/comment_button' %>
+              </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
-  <%= render 'stories/comments_section', story: story %>
+    <%= render 'stories/comments_section', story: story %>
+  <% end %>
 </div>
