--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,7 +11,7 @@
       <%= render 'users/profile/share_button' %>
       <div class="user-map" id="cesiumContainer"></div>
     </div>
-    <div class='col-md-3 col-12 d-md-none remove-lr-padding' id='sticky-sidebar'>
+    <div class=' col-12 d-md-none remove-lr-padding' id='sticky-sidebar'>
       <%= render 'users/profile/side_bar' %>
     </div>
   </div>
