--- a/app/views/stories/_select_attachment.html.erb
+++ b/app/views/stories/_select_attachment.html.erb
@@ -1,2 +1,2 @@
-<%= link_to "Add Flight", '#', class: "btn btn-outline-dark add_flight_button mt-3 mb-2 mr-2" %>
-<%= link_to "Add Ratings", '#', class: "btn btn-outline-dark add_ratings_button mt-3 mb-2" %>
+<span class="btn btn-outline-dark add_flight_button mt-3 mb-2 mr-2">Add Flight</span>
+<span class="btn btn-outline-dark add_ratings_button mt-3 mb-2">Add Ratings</span>
