--- a/app/views/stories/_comments_section.html.erb
+++ b/app/views/stories/_comments_section.html.erb
@@ -3,7 +3,7 @@
     <div class="col-12">
       <div class="row">
         <div class="col">
-          <%= form_with model: [story, Comment.new], class: "new_comment" do |f| %>
+          <%= form_with model: [story, Comment.new], local: false, class: "new_comment" do |f| %>
             <div class="form-group">
               <%= f.text_area :body, class: 'form-control comment_text', placeholder: "Add a comment" %>
               <%= f.submit 'Comment', class: 'btn btn-primary mt-2 float-right'%>
