--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,4 @@
+<span id="run-cesium" data-map="true"></span>
 <%= title "Arelplane | #{@user.name}" %>
 <%= content_tag :div, id: "current_page", data: {page: @user.id} do %>
 <% end %>
@@ -16,3 +17,5 @@
     </div>
   </div>
 </div>
+
+<script src="../Cesium/Cesium.js"></script>
