--- a/app/views/stories/_form_errors.html.erb
+++ b/app/views/stories/_form_errors.html.erb
@@ -3,7 +3,7 @@
     <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span>
       <span class="sr-only">Close</span>
     </button>
-    <%= message %>
+    <%= alerts %>
   </div>
 <% else %>
   <% alerts.each do |message| %>
