story show page. comments not submitting remotely

--- a/app/views/stories/_card.html.erb
+++ b/app/views/stories/_card.html.erb
@@ -1,4 +1,4 @@
-<div class="card mb-4 feed_card" id="story_<%= story.id %>">
+<div class="card mb-4 story_card" id="story_<%= story.id %>">
   <div class="card-body">
     <div class="row">
       <div class="col-lg-8 col-12">
