--- a/app/views/users/home_page/_followings.html.erb
+++ b/app/views/users/home_page/_followings.html.erb
@@ -13,7 +13,7 @@
 <div class="row">
   <% users.try(:each) do |user| %>
     <div class="col-12 col-md-6">
-      <div class="card mb-4 feed_card">
+      <div class="card mb-4 story_card">
         <div class="card-body">
           <div class="row">
             <div class="col-lg-8 col-12">
