remove list of users being becasue it really slows things down. Infinite scroll will fix this

--- a/app/views/users/home_page/_side_bar.html.erb
+++ b/app/views/users/home_page/_side_bar.html.erb
@@ -1,2 +1,2 @@
 <%= render 'users/home_page/user_card' %>
-<%= render 'users/home_page/flights_leaderboard' %>
+<%#= render 'users/home_page/flights_leaderboard' %>
